--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Laila:wght@300;400;500;600;700&display=swap');
+
+* {
+    font-family: "Inter", sans-serif;
+    /* color: #333333; */
+}
+
+.main-heading {
+    font-family: "Laila", serif;
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
