--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Laila:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Laila:wght@300;400;500;600;700&display=swap");
 
 * {
     font-family: "Inter", sans-serif;
+    scroll-behavior: smooth;
     /* color: #333333; */
 }
 
@@ -19,7 +20,7 @@ figure {
     break-inside: avoid;
 }
 
-figure>img {
+figure > img {
     grid-row: 1 / -1;
     grid-column: 1;
 }
@@ -32,8 +33,8 @@ figure a {
 figcaption {
     grid-row: 2;
     grid-column: 1;
-    background-color: rgba(255, 255, 255, .5);
-    padding: .2em .5em;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 0.2em 0.5em;
     justify-self: start;
 }
 
@@ -57,7 +58,6 @@ figcaption {
         /* Adjust column count for mobile */
     }
 }
-
 
 @tailwind base;
 @tailwind components;
